force-app/main/default/objects/PWChrono_Tax_Declaration__c/PWChrono_Tax_Declaration__c.object-meta.xml
<CustomObject>
    <description>Employee Tax Declarations for IT Savings</description>
    <label>Tax Declaration</label>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Tax Declaration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Declarations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>