force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Tax Declarations</relationshipLabel>
    <relationshipName>PWChrono_Tax_Declarations</relationshipName>
    <type>Lookup</type>
</CustomField>