force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Employees__c.field-meta.xml
<CustomField>
    <fullName>Employees__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employees</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Tax Declaration Employees</relationshipLabel>
    <relationshipName>Tax_Declaration_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>