force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <label>Fiscal Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>