force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Medical_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Medical_Insurance__c</fullName>
    <label>Medical Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>