force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>