force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Section_80C__c.field-meta.xml
<CustomField>
    <fullName>Section_80C__c</fullName>
    <label>Section 80C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>