force-app/main/default/objects/PWChrono_Tax_Declaration__c/fields/Total_Declared_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Declared_Amount__c</fullName>
    <formula>BLANKVALUE(Section_80C__c, 0) + BLANKVALUE(HRA__c, 0) + BLANKVALUE(Medical_Insurance__c, 0) + BLANKVALUE(NPS__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Declared Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>